Added throw functionality.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Dice Game</string>
+    <string name="die_for_human">Die for human</string>
+    <string name="die_for_computer">Die for computer</string>
 </resources>
